<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.android.test.a1shippro.Activity.ConfirmCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_note"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_body" />

        <EditText
            android:id="@+id/etConfirmCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorBG"
            android:hint="@string/confirm_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="@dimen/padding_edittext"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/btActived"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/custom_button"
            android:text="@string/activated"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/mess_not_received"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_body" />
    </LinearLayout>
</LinearLayout>
