<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/colorPrimary"
android:orientation="vertical"
tools:context="com.android.test.a1shippro.Fragment.RegisterFragment">

<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btRegister"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_toolbar"  />
    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@color/colorBG">


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_edittext"
                android:layout_marginTop="30dp"
                android:background="@android:color/white"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_edittext"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/white"
                android:inputType="number"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/etInviteCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_edittext"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/white"
                android:hint="@string/invite_code"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true" />


                <Button
                    android:id="@+id/btNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/btNext"
                    android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimary"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/btFaceBook"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
                <Button
                    android:id="@+id/btG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorRed"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/btGoogle"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                />

        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
