<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.android.test.a1shippro.Activity.LoginActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:id="@+id/rltLogin"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:id="@+id/linearLayout">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_edittext"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:id="@+id/etPhone"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:background="@android:color/white"
                    />
        </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="16dp"
                android:text="@string/btLogin"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button"
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/btLogin" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btLogin"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:background="@null"
                android:text="@string/btRegister"
                android:id="@+id/btRegister"
                />
    </RelativeLayout>


</LinearLayout>
</android.support.design.widget.CoordinatorLayout>