<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.android.test.a1shippro.Activity.UpdateDHActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_scrollFlags="scroll|enterAlways|snap">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/l2"
        android:layout_below="@+id/appbar"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBG"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="5dp"
                            android:layout_height="40dp"
                            android:layout_centerVertical="true"
                            android:background="@color/colorAccent" />

                        <TextView
                            android:id="@+id/tvTitleCV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:text="@string/work"
                            android:textColor="@color/abc_primary_text_disable_only_material_light"
                            android:textSize="@dimen/textsize_title"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/spWork"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:textSize="@dimen/textsize_sub_title"
                            />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/radioGroup">

                            <RadioButton
                                android:id="@+id/rbFinish"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/finish"
                                android:textSize="@dimen/textsize_sub_title" />

                            <RadioButton
                                android:id="@+id/rbUnfish"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/unfinished"
                                android:textSize="@dimen/textsize_sub_title" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etReason"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="top"
                            android:hint="@string/reason_mutiltext"
                            android:inputType="textMultiLine"
                            android:lines="3"
                            android:textSize="@dimen/textsize_sub_title" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBG"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="5dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvTitleImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/image"
                        android:textColor="@color/abc_primary_text_disable_only_material_light"
                        android:textSize="@dimen/textsize_title"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/btnAddImage">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="false"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/ic_add_image" />

                        <TextView
                            android:id="@+id/tvAddImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:text="@string/add_image"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textsize_sub_title" />
                    </LinearLayout>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"></android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBG"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="5dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/note"
                        android:textColor="@color/abc_primary_text_disable_only_material_light"
                        android:textSize="@dimen/textsize_title"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/btnChangeNote">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="false"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/ic_edit_info" />

                        <TextView
                            android:id="@+id/tvChange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:text="@string/change"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textsize_sub_title"
                            android:layout_gravity="center_vertical" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:textSize="@dimen/textsize_sub_title" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/lnEdit">
                    <EditText
                        android:id="@+id/etNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:textSize="@dimen/textsize_sub_title" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/btnOk"
                            android:id="@+id/btnOk"
                            android:layout_weight="1"
                            android:textSize="@dimen/textsize_sub_title" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/btnCancle"
                            android:id="@+id/btnCancle"
                            android:layout_weight="1"
                            android:textSize="@dimen/textsize_sub_title" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView53213"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0"
                    android:text="@string/done"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_title" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
